<?xml version="1.0"?>
<package format="2">
  <name>arlo_gazebo</name>
  <version>1.3.2</version>
  <description>
    Gazebo simulation package for the Parallax Arlo. 
    ...Built on top of the turtlebot3_gazebo package.
  </description>
  <license>Apache 2.0</license>
  <!-- original authors -->
  <!-- <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/arlo_gazebo</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url> --> 
  <author email="dwd394@gmail.com">Danial Dunson</author>
  <maintainer email="TODO@TODO.TODO">TO DO</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>rtabmap_ros</depend>
  <depend>realsense2_description</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>message_generation</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>realsense_gazebo_plugin</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>arlo_gazebo_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  
  <depend>aws_robomaker_small_house_world</depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
